5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1613_1800.log
== SUBMITION (2019-04-02 13:16:10) 
-- CODE:
va= int("variavel a: ")
vb= int("variavel b: ")
vb= int("variavel c: ")
resultado= a**2 + b**2 + c**2 / a + b + c
print(round(resultado, 7))
-- EXECUTION TIME:
0.137976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 1, in <module>
    va= int("variavel a: ")
ValueError: invalid literal for int() with base 10: 'variavel a: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:16:13) 
-- CODE:
va= int("variavel a: ")
vb= int("variavel b: ")
vb= int("variavel c: ")
resultado= a**2 + b**2 + c**2 / a + b + c
print(round(resultado, 7))
-- EXECUTION TIME:
0.146602
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 1, in <module>
    va= int("variavel a: ")
ValueError: invalid literal for int() with base 10: 'variavel a: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:16:52) 
-- CODE:
va= int("variavel a: ")
vb= int("variavel b: ")
vb= int("variavel c: ")
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- EXECUTION TIME:
0.206035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 1, in <module>
    va= int("variavel a: ")
ValueError: invalid literal for int() with base 10: 'variavel a: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:17:00) 
-- CODE:
va= int("variavel a: ")
vb= int("variavel b: ")
vb= int("variavel c: ")
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- EXECUTION TIME:
0.131568
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 1, in <module>
    va= int("variavel a: ")
ValueError: invalid literal for int() with base 10: 'variavel a: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:24) 
-- CODE:
va= int("variavel a: ")
vb= int("variavel b: ")
vb= int("variavel c: ")
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    va= int("variavel a: ")
ValueError: invalid literal for int() with base 10: 'variavel a: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:14) 
-- CODE:
va= float(input("variavel a: "))
vb= float(input("variavel b: "))
vb= float(input("variavel c: "))
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resultado= (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:12:17) 
-- CODE:
va= float(input("variavel a: "))
vb= float(input("variavel b: "))
vb= float(input("variavel c: "))
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- EXECUTION TIME:
0.196303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    resultado= (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:45) 
-- CODE:
va= float(input("variavel a: "))
vb= float(input("variavel b: "))
vb= float(input("variavel c: "))
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resultado= (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:12:57) 
-- CODE:
va= float(input("variavel a: "))
vb= float(input("variavel b: "))
vb= float(input("variavel c: "))
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- EXECUTION TIME:
0.18266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    resultado= (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:14:32) 
-- CODE:
va= float(input("variavel a: "))
vb= float(input("variavel b: "))
vb= float(input("variavel c: "))
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resultado= (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:14:36) 
-- CODE:
va= float(input("variavel a: "))
vb= float(input("variavel b: "))
vb= float(input("variavel c: "))
resultado= (a**2 + b**2 + c**2) / (a + b + c)
print(round(resultado, 7))
-- EXECUTION TIME:
0.161919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    resultado= (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:31) 
-- CODE:
a=float(input(" Digite um variavel A: "))
b=float(input("Variavel B : "))
c=float(input("Variavel C: "))
t=((a**2)+(b**2)+(c**2))/a+b+C
print(round(t,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=((a**2)+(b**2)+(c**2))/a+b+C
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:42) 
-- CODE:
a=float(input(" Digite um variavel A: "))
b=float(input("Variavel B : "))
c=float(input("Variavel C: "))
t=((a**2)+(b**2)+(c**2))/a+b+c
print(round(t,7))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:51) 
-- CODE:
a=float(input(" Digite um variavel A: "))
b=float(input("Variavel B : "))
c=float(input("Variavel C: "))
t=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(t,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:18:00) 
-- CODE:
a=float(input(" Digite um variavel A: "))
b=float(input("Variavel B : "))
c=float(input("Variavel C: "))
t=((a**2)+(b**2)+(c**2))/(a+b+c)
print(round(t,7))
-- EXECUTION TIME:
0.137542
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
